--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,18 @@ nav ul li a{
         
     }
 }
+.banner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 450px;
+    background-image: url("//unsplash.it/900/450/?blur");
+    background-size: cover;
+    background-position: center;
+    background-color: #333;
+    
+}
 .footer{
     position: absolute;
     left: 0;
@@ -93,4 +105,26 @@ nav ul li a{
     padding: 24px;
     color: white;
     text-align: center;
+}
+@keyframes appear {
+    from{
+        opacity: 0;
+        top: -100px;
+    }
+    to{
+        opacity: 1;
+        top: 0;
+
+    }
+    
+}
+.banner .heading{
+    position: relative;
+    font-size: 3em;
+    color: white;
+    font-weight: bold;
+    animation: appear 1s ease-in-out 0s forwards;
+}
+.banner .heading small{
+    font-size: 24px;
 }
