--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     font-family: "Quicksand", sans-serif;
     min-height: 100vh;
     max-width: 1280px;
-    background-color: #fff;
+    background-color: white;
     margin: 0 auto;
 }
 body{
@@ -11,7 +11,7 @@ body{
     border: 1px solid #ddd;
 }
 .page-container{
-
+    margin-bottom: 70px;
 }
 .nav{
 
@@ -100,7 +100,7 @@ nav ul li a{
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: 1;
     background-color: #333;
     padding: 24px;
     color: white;
@@ -127,4 +127,45 @@ nav ul li a{
 }
 .banner .heading small{
     font-size: 24px;
+}
+.maintext{
+    padding: 12px;
+    font-size: 18px;
+}
+.subtext{
+    display: flex;
+}
+.subtext div{
+    padding: 20px;
+    margin: 10px;
+    border-radius: 10px;
+    color: white;
+}
+.subtext .red{
+    background-color: #ff6363;
+}
+.subtext .yellow{
+    background-color: #f0a500;
+}
+.subtext .green{
+    background-color: #1eb2a6;
+}
+.quote{
+    text-align: center;
+    padding: 50px;
+    background-color: #eee;
+    display: block;
+    font-style: italic;
+}
+.quote::before{
+    display: inline-block;
+    content: open-quote;
+    color: #d3d3d3;
+    font-size: 32px;
+}
+.quote::after{
+    display: inline-block;
+    content: close-quote;
+    color: #d3d3d3;
+    font-size: 32px;
 }
