--- a/styles.css
+++ b/styles.css
@@ -134,12 +134,17 @@ nav ul li a{
 }
 .subtext{
     display: flex;
+    /* flex-wrap: wrap;
+    justify-content: center; */
+   
 }
 .subtext div{
     padding: 20px;
     margin: 10px;
     border-radius: 10px;
     color: white;
+    /* width: 300px; */
+    
 }
 .subtext .red{
     background-color: #ff6363;
@@ -168,4 +173,60 @@ nav ul li a{
     content: close-quote;
     color: #d3d3d3;
     font-size: 32px;
+}
+.projHead{
+    font-size: 24px;
+    padding: 12px;
+    margin: 10px;
+    border-top: 5px solid #ddd;
+    border-bottom: 5px solid #ddd;
+}
+.projects{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.project{
+    /* width: 325px; */
+    /* instead of width we can use flex-basis */
+    flex-basis: 325px;
+    padding: 20px;
+    margin: 20px;
+    box-sizing: border-box;
+    border: 2px solid #d3d3d3;
+    border-radius: 10px;
+}
+.project h4{
+    font-size: 20px;
+    padding: 12px;
+    margin: 10px;
+    border-top: 5px solid #ddd;
+    border-bottom: 5px solid #ddd;
+}
+.project p{
+    padding: 0px 12px;
+}
+.project img{
+    width: 100%;
+    border-radius: 10px;
+    background-image: linear-gradient(45deg, #c7c3c4 25%, #8a8e91 25%, #8a8e91 50%, #c7c3c4 50%, #c7c3c4 75%, #8a8e91 75%, #8a8e91 100%);
+    background-size: 56.57px 56.57px;;
+    transition: all 0.5s ease-in-out;
+}
+.project img:hover{
+    transform: scale(0.95);
+    opacity: 0.5;
+}
+.project button{
+    background-color: #4caf50;
+    border:none;
+    border-radius: 10px;
+    width: 100%;
+    color: white;
+    font-size: 12px;
+    padding: 12px 20px;
+    transition: all 0.2s ease-in-out;
+}
+.project button:hover{
+    background-color: #45a049;
 }
