--- a/styles.css
+++ b/styles.css
@@ -96,16 +96,7 @@ nav ul li a{
     background-color: #333;
     
 }
-.footer{
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 1;
-    background-color: #333;
-    padding: 24px;
-    color: white;
-    text-align: center;
-}
+
 @keyframes appear {
     from{
         opacity: 0;
@@ -229,4 +220,62 @@ nav ul li a{
 }
 .project button:hover{
     background-color: #45a049;
+}
+.gallery{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    background-image: linear-gradient(45deg, #e0e0e0 25%, #d6d6d6 25%, #d6d6d6 50%, #e0e0e0 50%, #e0e0e0 75%, #d6d6d6 75%, #d6d6d6 100%);
+    background-size: 56.57px 56.57px;
+    grid-gap: 8px;
+    padding: 12px;
+}
+.gallery-item{
+    width: 100%;
+    height: 100%;
+    transition: all 0.2s ease-in-out;
+}
+.gallery-item:hover{
+    transform: scale(0.95);
+}
+.gallery-item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.gallery-item-1{
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+.gallery-item-2{
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+.gallery-item-3{
+    grid-column: 3/5;
+    grid-row: 1/3;
+}
+.gallery-item-4{
+    grid-column: 1/3;
+    grid-row: 2/4;
+}
+.gallery-item-5{
+    grid-column: 3/4;
+    grid-row: 3/4;
+}
+.gallery-item-6{
+    grid-column: 4/5;
+    grid-row: 3/4;
+}
+
+.footer{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 1;
+    background-color: #333;
+    padding: 24px;
+    color: white;
+    text-align: center;
+    
 }
