--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,7 @@ body{
 .page-container{
     margin-bottom: 70px;
 }
-.nav{
 
-}
 nav{
     background-color: #222;
     display: flex;
@@ -57,32 +55,6 @@ nav ul li.active{
 nav ul li a{
     color: white;
     text-decoration: none;
-}
-
-@media all and (max-width:800px){
-    nav{
-        justify-content: start;
-    }
-    nav ul {
-        justify-content: space-between;
-    }
-}
-@media all and (max-width: 600px){
-    nav{
-        flex-direction: column;
-        align-items: center;
-        
-    }
-    nav ul{
-        width: 100%;
-        flex-direction: column;
-        align-items: stretch;
-        
-    }
-    nav ul li{
-        text-align: center;
-        
-    }
 }
 .banner{
     display: flex;
@@ -267,7 +239,48 @@ nav ul li a{
     grid-column: 4/5;
     grid-row: 3/4;
 }
-
+.conttitle{
+    font-size: 24px;
+    padding: 12px;
+    margin: 10px;
+    border-top: 5px solid #ddd;
+    border-bottom: 5px solid #ddd;
+}
+.container{
+    display: flex;
+    border: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    margin: 10px 0px;
+}
+input[type=text], select, textarea{
+    width: 100%;
+    border: 1px solid #ccc;
+    padding: 12px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    height: 50px;
+}
+input[type=submit]{
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 4px;
+    padding: 12px 20px;
+    color: white;
+}
+input[type=submit]:hover{
+    background-color: #45a049;
+}
+.container form{
+    flex: 1;
+}
+.container .map{
+    flex: 1;
+    padding: 12px;
+    margin-left: 20px;
+}
 .footer{
     position: absolute;
     left: 0;
@@ -278,4 +291,35 @@ nav ul li a{
     color: white;
     text-align: center;
     
+}
+@media all and (max-width:800px){
+    nav{
+        justify-content: start;
+    }
+    nav ul {
+        justify-content: space-between;
+    }
+}
+@media all and (max-width: 600px){
+    nav{
+        flex-direction: column;
+        align-items: center;
+        
+    }
+    nav ul{
+        width: 100%;
+        flex-direction: column;
+        align-items: stretch;
+        
+    }
+    nav ul li{
+        text-align: center;
+        
+    }
+    .container{
+        flex-direction: column;
+    }
+    .container .map{
+        margin-left: 0px;
+    }
 }
